--- a/styles.css
+++ b/styles.css
@@ -14,4 +14,14 @@ main {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  position: relative;
+}
+
+.left-overlay {
+  width: 50vw;
+  height: 100%;
+  background: white;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
