--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,12 @@ main {
   top: 0;
   left: 0;
 }
+
+.right-overlay {
+  width: 200px;
+  height: 150px;
+  background: black;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+}
