--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,15 @@ main {
   left: 0;
 }
 
+.chair-img {
+  width: 200px;
+  height: 150px;
+  object-fit: cover;
+  position: absolute;
+  bottom: 0;
+  right: 50%;
+}
+
 .right-overlay {
   width: 200px;
   height: 150px;
