--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,31 @@ main {
   align-items: center;
 }
 
+.center-text {
+  width: 100%;
+  height: 50%;
+  position: relative;
+}
+
+.text-lines {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+#number {
+  font-size: 5rem;
+}
+
+#description {
+  font-size: 2rem;
+}
+
+#shop-now {
+  font-size: 0.75rem;
+}
+
 #left-bar {
   height: 100%;
   width: 40%;
