--- a/styles.css
+++ b/styles.css
@@ -66,10 +66,15 @@ main {
 }
 
 .text-lines {
+  width: 50%;
+  height: 70%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 #number {
