--- a/styles.css
+++ b/styles.css
@@ -148,3 +148,20 @@ main {
 #right-overlay-bottom-arrow {
   color: #595959;
 }
+
+footer {
+  width: 100%;
+  height: 100px;
+  padding: 5%;
+  font-size: 0.75rem;
+}
+
+footer ul {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+}
+
+.footer-item {
+  width: 20%;
+}
