--- a/styles.css
+++ b/styles.css
@@ -165,3 +165,16 @@ footer ul {
 .footer-item {
   width: 20%;
 }
+
+#collections {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 10%;
+}
+
+.bar {
+  width: 40%;
+  height: 1px;
+  background: black;
+}
